# jellyfin-sports-dvr

./: .gitignore  LICENSE  README.md  dispatchar-teamarr.xml
plugin/: build.sh
plugin/Jellyfin.Plugin.SportsDVR/: Jellyfin.Plugin.SportsDVR.csproj  Plugin.cs  PluginServiceRegistrator.cs
plugin/Jellyfin.Plugin.SportsDVR/Api/: SportsController.cs  SportsDVRController.cs
plugin/Jellyfin.Plugin.SportsDVR/Configuration/: PluginConfiguration.cs  configPage.html  libraryPage.html
plugin/Jellyfin.Plugin.SportsDVR/Models/: ParsedProgram.cs  SportsRecordingDto.cs  Subscription.cs  UpcomingRecordingDto.cs
plugin/Jellyfin.Plugin.SportsDVR/Services/: AliasService.cs  EpgParser.cs  GuideCachePurgeService.cs  PatternMatcher.cs  RecordingScheduler.cs  SmartScheduler.cs  SportsLibraryService.cs  SportsScorer.cs  SubscriptionManager.cs  TeamAliases.cs
plugin/Jellyfin.Plugin.SportsDVR/Tasks/: CleanupTask.cs  EpgScanTask.cs
scripts/: README.md  clear-jellyfin-guide-cache-linux.sh  clear-jellyfin-guide-cache.sh
service/: Dockerfile  docker-compose.yml  pyproject.toml
service/sports_dvr/: config.py  main.py
service/sports_dvr/api/: routes.py
service/sports_dvr/recording/: manager.py
